--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
 
     <title>NEIVARS</title>
 
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
 
 <body>
     <div class="manilla-folder">
+        <div class="paper-sheet__tabs">
+            <a href="/" class="paper-sheet__tab">Home</a>
+            <a href="/blog" class="paper-sheet__tab paper-sheet__tab--not-active">Blog</a>
+        </div>
         <div class="paper-sheet main">
-            <img class="paperclip" src="static/clip.png" alt=""> <!-- Paperclip Image © 2016 - 2020 Satans-Comrade -->
-            <img class="agent-mugshot" src="static/agent.png" alt="">
-            <img class="stamp-dev" src="static/minsynthcog.png" alt="">
+            <img class="paperclip" src="/static/clip.png" alt=""> <!-- Paperclip Image © 2016 - 2020 Satans-Comrade -->
+            <img class="agent-mugshot" src="/static/agent.png" alt="">
+            <img class="stamp-dev" src="/static/minsynthcog.png" alt="">
 
             <header class="paper-sheet__header">
                 <h2 class="paper-sheet__subheader" role="presentation">合成認識省</h2>
